--- a/src/storeBundle/Resources/views/store/accueil.html.twig
+++ b/src/storeBundle/Resources/views/store/accueil.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 <h1>Bienvenue dans le store php</h1>
+<a href="{{path("AddProduit")}}">Ajouter un produit</a>
+<a href="{{path("DelProduit")}}">Supprimer un produit</a>
 <table>
   <tr>
     <th>
