--- a/src/storeBundle/Resources/views/store/add_produit.html.twig
+++ b/src/storeBundle/Resources/views/store/add_produit.html.twig
@@ -3,5 +3,5 @@
 {% block title %}storeBundle:store:AddProduit{% endblock %}
 
 {% block body %}
-<h1>Welcome to the store:AddProduit page</h1>
+{{form(form)}}
 {% endblock %}
